[package]
name = "vais-registry-server"
version = "0.1.0"
edition = "2021"
description = "Vais package registry server"
license = "MIT"
authors = ["Steve"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Archive handling
flate2 = "1.0"
tar = "0.4"

# Configuration
config = "0.14"
dotenvy = "0.15"
tempfile = "3.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
