[package]
name = "vais-registry-server"
version.workspace = true
edition = "2021"
description = "Vais package registry server"
license = "MIT"
authors = ["Steve"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Cryptography
sha2 = { workspace = true }
hex = "0.4"
argon2 = "0.5"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Archive handling
flate2 = { workspace = true }
tar = { workspace = true }

# Configuration
config = "0.14"
dotenvy = "0.15"
tempfile = "3.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
