[package]
name = "vais-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Security analysis and auditing tools for the Vais programming language"

[dependencies]
vais-ast = { path = "../vais-ast" }
vais-parser = { path = "../vais-parser" }
thiserror = { workspace = true }

[dev-dependencies]
vais-lexer = { path = "../vais-lexer" }
pretty_assertions = { workspace = true }
